--- a/exercise_1.html
+++ b/exercise_1.html
@@ -16,7 +16,7 @@
   <a href="exercises.html" class="back-arrow">
     <img src="images/back_arrow.svg">
   </a>
-	<h1>TP1</h1>
+	<h1 class="title">TP1</h1>
 	<div class="bar"></div>
 	<h2>Word Cloud</h2>
   <div id="container"></div>
