--- a/exercise_2.html
+++ b/exercise_2.html
@@ -16,9 +16,21 @@
   <a href="exercises.html" class="back-arrow">
     <img src="images/back_arrow.svg">
   </a>
-	<h1>TP2</h1>
+	<h1 class="title">TP2</h1>
 	<div class="bar"></div>
 	<h2>D3 + SVG</h2>
   <div id="container"></div>
+  <div class="reference">
+    <div class="rect-agree rect-reference"></div>
+    <span>Agree</span>
+  </div>
+  <div class="reference">
+    <div class="rect-neutral rect-reference"></div>
+    <span>Neutral</span>
+  </div>
+  <div class="reference">
+    <div class="rect-disagree rect-reference"></div>
+    <span>Disagree</span>
+  </div>
 </body>
 </html>
