--- a/exercises.html
+++ b/exercises.html
@@ -32,6 +32,26 @@
 							<img src="images/2.svg" alt="Ejercicio 2"/>
 						</a>
 					</li>
+					<li>
+						<a href="exercise_3.html" data-largesrc="images/3.svg" data-title="TP3:" data-description=''>
+							<img src="images/3.svg" alt="Ejercicio 3"/>
+						</a>
+					</li>
+					<li>
+						<a href="exercise_4.html" data-largesrc="images/4.svg" data-title="TP4:" data-description=''>
+							<img src="images/4.svg" alt="Ejercicio 4"/>
+						</a>
+					</li>
+					<li>
+						<a href="exercise_5.html" data-largesrc="images/5.svg" data-title="TP5:" data-description=''>
+							<img src="images/5.svg" alt="Ejercicio 5"/>
+						</a>
+					</li>
+					<li>
+						<a href="exercise_6.html" data-largesrc="images/6.svg" data-title="TP6:" data-description=''>
+							<img src="images/6.svg" alt="Ejercicio 6"/>
+						</a>
+					</li>
 				</ul>
 			</div>
 		</div>
