--- a/exercises.html
+++ b/exercises.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-		<title>Noelia Belén López</title>
+		<title>infoVis</title>
 		<meta name="author" content="Noelia López" />
 		<link rel="stylesheet" type="text/css" href="css/default.css" />
 		<link rel="stylesheet" type="text/css" href="css/component.css" />
@@ -14,42 +14,42 @@
 	</head>
 	<body class="exercises">
 		<a href="index.html" class="back-arrow">
-			<img src="images/back_arrow.svg">
+			<img src="images/back_arrow.png">
 		</a>
 		<div class="container">	
 			<h1 class="title">Visualización de la Información</h1>
 			<div class="bar"></div>
-			<h2>Noelia Belén López</h2>
+			<h2>Trabajos Prácticos</h2>
 			<div class="main">
 				<ul id="og-grid" class="og-grid">
 					<li>
-						<a href="exercise_1.html" data-largesrc="images/1.svg" data-title="TP1: Word Cloud" data-description='(10/3/2016) Armar una nube de palabras con las definiciones de "Visualización de la información".'>
-							<img src="images/1.svg" alt="Ejercicio 1"/>
+						<a href="exercise_1.html" data-largesrc="images/1.png" data-title="TP1: Word Cloud" data-description='(10/3/2016) Armar una nube de palabras con las definiciones de "Visualización de la información".'>
+							<img src="images/1.png" alt="Ejercicio 1"/>
 						</a>
 					</li>
 					<li>
-						<a href="exercise_2.html" data-largesrc="images/2.svg" data-title="TP2: D3 + SVG" data-description='(17/3/2016) Tomar los datos de la tabla "How people feel when they make a Wordle" y realizar un gráfico en SVG.'>
-							<img src="images/2.svg" alt="Ejercicio 2"/>
+						<a href="exercise_2.html" data-largesrc="images/2.png" data-title="TP2: D3 + png" data-description='(17/3/2016) Tomar los datos de la tabla "How people feel when they make a Wordle" y realizar un gráfico en png.'>
+							<img src="images/2.png" alt="Ejercicio 2"/>
 						</a>
 					</li>
 					<li>
-						<a href="exercise_3.html" data-largesrc="images/3.svg" data-title="TP3:" data-description=''>
-							<img src="images/3.svg" alt="Ejercicio 3"/>
+						<a href="exercise_3.html" data-largesrc="images/3.png" data-title="TP3:" data-description=''>
+							<img src="images/3.png" alt="Ejercicio 3"/>
 						</a>
 					</li>
 					<li>
-						<a href="exercise_4.html" data-largesrc="images/4.svg" data-title="TP4:" data-description=''>
-							<img src="images/4.svg" alt="Ejercicio 4"/>
+						<a href="exercise_4.html" data-largesrc="images/4.png" data-title="TP4:" data-description=''>
+							<img src="images/4.png" alt="Ejercicio 4"/>
 						</a>
 					</li>
 					<li>
-						<a href="exercise_5.html" data-largesrc="images/5.svg" data-title="TP5:" data-description=''>
-							<img src="images/5.svg" alt="Ejercicio 5"/>
+						<a href="exercise_5.html" data-largesrc="images/5.png" data-title="TP5:" data-description=''>
+							<img src="images/5.png" alt="Ejercicio 5"/>
 						</a>
 					</li>
 					<li>
-						<a href="exercise_6.html" data-largesrc="images/6.svg" data-title="TP6:" data-description=''>
-							<img src="images/6.svg" alt="Ejercicio 6"/>
+						<a href="exercise_6.html" data-largesrc="images/6.png" data-title="TP6:" data-description=''>
+							<img src="images/6.png" alt="Ejercicio 6"/>
 						</a>
 					</li>
 				</ul>
