--- a/exercises.html
+++ b/exercises.html
@@ -14,7 +14,7 @@
 	</head>
 	<body class="exercises">
 		<a href="index.html" class="back-arrow">
-			<img src="images/back_arrow.png">
+			<img src="images/back_arrow.svg">
 		</a>
 		<div class="container">	
 			<h1 class="title">Visualización de la Información</h1>
