--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Práctica 2</title>
+  <title>infoVis</title>
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
@@ -12,7 +12,7 @@
 	<h1>Visualización de la Información</h1>
 	<div class="bar"></div>
 	<h2>2016</h2>
-	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a mi laoreet, sollicitudin odio nec, cursus enim. Integer massa enim, scelerisque vitae lectus non, tempus tempus tellus. Vestibulum tristique ultricies dui, nec vehicula ante vestibulum vitae. Nam consectetur condimentum est vitae ornare. In et varius lorem. Mauris ornare euismod dui, sit amet semper est. Integer rutrum turpis id ante varius tempor. Aenean quis ornare tellus. Duis id diam sollicitudin, rutrum eros nec, tempor odio. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Maecenas scelerisque egestas purus, non convallis mi luctus luctus. Mauris pellentesque vehicula odio, ac sodales massa efficitur eu. Donec nec velit et nunc fermentum dictum. Nullam vel lorem vel nunc finibus facilisis. Pellentesque ut magna diam.</p>
+	<p>Este repositorio contiene los TPS de Noelia Belén López correspondientes a la materia Visualización de la Información. Objetivos de la materia: Representar un conjunto de datos de manera visual utilizando herramientas o programando una solución ad-hoc. Para llegar a este objetivo, se presentaran buenas practicas y antecedentes inspiradores para lograr este objetivo. Conocer el estado del arte de la tecnología para realizar esta tarea. Formar a los alumnos para estar preparados en el diseño, la implementación y la evaluación de visualizaciones interactivas o infografías estáticas.</p>
   <a class="link pink-link" href="exercises.html">TPS</a>
   </div>
 </body>
