--- a/exercise_personal.html
+++ b/exercise_personal.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>TP1: Word Cloud</title>
+  <title>infovis ♡</title>
 
   <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="css/personal.css">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-  <script type="text/javascript" src="http://momentjs.com/downloads/moment.min.js"></script>
   
   <script type="text/javascript" src="js/exercise_personal.js"></script>
 </head>
@@ -17,9 +17,10 @@
   <a href="exercises.html" class="back-arrow">
     <img src="images/back_arrow.svg">
   </a>
-	<h1 class="title">TP Datos personales</h1>
+	<h1 class="title">Personal Data</h1>
 	<div class="bar"></div>
-	<h2>Historial de canciones reproducidas</h2>
+	<h2>Spotify Statistics</h2>
   <div id="container"></div>
+  <div id="container-2"></div>
 </body>
 </html>
