--- a/exercise_personal_2.html
+++ b/exercise_personal_2.html
@@ -11,16 +11,15 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
   
-  <script type="text/javascript" src="js/exercise_personal.js"></script>
+  <script type="text/javascript" src="js/exercise_personal_2.js"></script>
 </head>
 <body class="exercise exercise-1">
   <a href="exercises.html" class="back-arrow">
     <img src="images/back_arrow.svg">
   </a>
-	<h1 class="title">Personal Data</h1>
+	<h1 class="title">Spotify statistics</h1>
 	<div class="bar"></div>
-	<h2>Spotify Statistics</h2>
-  <div id="container"></div>
+	<h2>Top artists</h2>
   <div id="container-2"></div>
 </body>
 </html>
