--- a/exercises.html
+++ b/exercises.html
@@ -43,13 +43,13 @@
 						</a>
 					</li>
 					<li>
-						<a href="exercise_5.html" data-largesrc="images/5.png" data-title="TP5:" data-description=''>
-							<img src="images/5.png" alt="Ejercicio 5"/>
+						<a href="exercise_personal_1.html" data-largesrc="images/top_tracks.svg" data-title="TP: Spotify Statistics" data-description='Top tracks'>
+							<img src="images/top_tracks.svg" alt="Top tracks"/>
 						</a>
 					</li>
 					<li>
-						<a href="exercise_6.html" data-largesrc="images/6.png" data-title="TP6:" data-description=''>
-							<img src="images/6.png" alt="Ejercicio 6"/>
+						<a href="exercise_personal_2.html" data-largesrc="images/top_albums.svg" data-title="TP: Spotify Statistics" data-description='Top albums'>
+							<img src="images/top_albums.svg" alt="Top albums"/>
 						</a>
 					</li>
 				</ul>
