--- a/exercises.html
+++ b/exercises.html
@@ -43,12 +43,12 @@
 						</a>
 					</li>
 					<li>
-						<a href="exercise_personal_1.html" data-largesrc="images/top_tracks.svg" data-title="TP: Spotify Statistics" data-description='Top tracks'>
+						<a href="exercise_personal_1.html" data-largesrc="images/top tracks.svg" data-title="TP: Spotify Statistics" data-description='Top tracks'>
 							<img src="images/top_tracks.svg" alt="Top tracks"/>
 						</a>
 					</li>
 					<li>
-						<a href="exercise_personal_2.html" data-largesrc="images/top_albums.svg" data-title="TP: Spotify Statistics" data-description='Top albums'>
+						<a href="exercise_personal_2.html" data-largesrc="images/top albums.svg" data-title="TP: Spotify Statistics" data-description='Top albums'>
 							<img src="images/top_albums.svg" alt="Top albums"/>
 						</a>
 					</li>
