--- a/exercises.html
+++ b/exercises.html
@@ -44,12 +44,12 @@
 					</li>
 					<li>
 						<a href="exercise_personal_1.html" data-largesrc="images/top tracks.svg" data-title="TP: Spotify Statistics" data-description='Top tracks'>
-							<img src="images/top_tracks.svg" alt="Top tracks"/>
+							<img src="images/top tracks.svg" alt="Top tracks"/>
 						</a>
 					</li>
 					<li>
 						<a href="exercise_personal_2.html" data-largesrc="images/top albums.svg" data-title="TP: Spotify Statistics" data-description='Top albums'>
-							<img src="images/top_albums.svg" alt="Top albums"/>
+							<img src="images/top albums.svg" alt="Top albums"/>
 						</a>
 					</li>
 				</ul>
