--- a/exercise_personal_1.html
+++ b/exercise_personal_1.html
@@ -11,7 +11,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
   
-  <script type="text/javascript" src="js/exercise_personal.js"></script>
+  <script type="text/javascript" src="js/exercise_personal_1.js"></script>
 </head>
 <body class="exercise exercise-1">
   <a href="exercises.html" class="back-arrow">
