--- a/exercises.html
+++ b/exercises.html
@@ -38,7 +38,7 @@
 						</a>
 					</li>
 					<li>
-						<a href="exercise_4.html" data-largesrc="images/4.png" data-title="TP4:" data-description=''>
+						<a href="exercise_4.html" data-largesrc="images/4.png" data-title="TP4:" data-description='Two circles'>
 							<img src="images/4.png" alt="Ejercicio 4"/>
 						</a>
 					</li>
