--- a/exercise_personal_2.html
+++ b/exercise_personal_2.html
@@ -15,7 +15,7 @@
 </head>
 <body class="exercise exercise-1">
   <a href="exercises.html" class="back-arrow">
-    <img src="images/back_arrow.svg">
+    <img src="images/back_arrow_green.svg">
   </a>
 	<h1 class="title">Spotify statistics</h1>
 	<div class="bar"></div>
