--- a/exercise_personal_2.html
+++ b/exercise_personal_2.html
@@ -17,9 +17,13 @@
   <a href="exercises.html" class="back-arrow">
     <img src="images/back_arrow_green.svg">
   </a>
-	<h1 class="title">Spotify statistics</h1>
-	<div class="bar"></div>
-	<h2>Top artists</h2>
   <div id="container-2"></div>
+  <h1>Top Artists</h1>
+  <div class="bar"></div>
+  <div class="chart-notes">
+    <p>Para hacer este gráfico me base en <a href="http://bl.ocks.org/mbostock/4348373">Zoomable Sunburst</a>.</p>
+    <p>La idea es representar los 10 artistas más escuchados con sus albums y canciones. El primer anillo desde el centro hacia afuera, representa los artistas y su area es proporcional a la cantidad de veces que fue reproducido el mismo. El segundo anillo corresponde a los albums de ese artista y su área también esta definida en base a la cantidad de veces que fue reproducida una canción de dicho album. Por último, el anillo exterior corresponden a las canciones para un artista y album particular. Los datos representados corresponden al historial de canciones reproducidas desde el día 31 de Marzo de 2016 al día 2 de Mayo de 2016.</p>
+    <p>Perfil de Last.fm<a href="http://www.last.fm/user/lopeznoeliab">lopeznoeliab</a></p>
+  </div>
 </body>
 </html>
