--- a/exercises.html
+++ b/exercises.html
@@ -28,7 +28,7 @@
 						</a>
 					</li>
 					<li>
-						<a href="exercise_2.html" data-largesrc="images/2.png" data-title="TP2: D3 + png" data-description='(17/3/2016) Tomar los datos de la tabla "How people feel when they make a Wordle" y realizar un gráfico en png.'>
+						<a href="exercise_2.html" data-largesrc="images/2.png" data-title="TP2: D3 + SVG" data-description='(17/3/2016) Tomar los datos de la tabla "How people feel when they make a Wordle" y realizar un gráfico en svg.'>
 							<img src="images/2.png" alt="Ejercicio 2"/>
 						</a>
 					</li>
@@ -38,7 +38,7 @@
 						</a>
 					</li>
 					<li>
-						<a href="exercise_4.html" data-largesrc="images/4.png" data-title="TP4:" data-description='Two circles'>
+						<a href="exercise_4.html" data-largesrc="images/4.png" data-title="TP4: Círculos" data-description='Two circles'>
 							<img src="images/4.png" alt="Ejercicio 4"/>
 						</a>
 					</li>
@@ -48,7 +48,7 @@
 						</a>
 					</li>
 					<li>
-						<a href="" data-largesrc="images/top albums.svg" data-title="TP: Spotify Statistics" data-description='Top albums'>
+						<a href="exercise_personal_3.html" data-largesrc="images/top albums.svg" data-title="TP: Spotify Statistics" data-description='Top albums'>
 							<img src="images/top albums.svg" alt="Top albums"/>
 						</a>
 					</li>
