--- a/exercise_personal_3.html
+++ b/exercise_personal_3.html
@@ -20,6 +20,7 @@
   <div id="container-3"></div>
   <h1>Top Albums</h1>
   <div class="bar"></div>
+  <h2>Estadíticas de Spotify</h2>
   <div class="chart-notes">
     <p>La idea es representar el top 10 de albums más veces reproducidos. Lo que hago es usar la API que proporciona <a href="">Last.fm</a>para consultar estadísticas sobre las canciones reproducidas con Spotify. Los datos representados corresponden al historial de canciones reproducidas desde el día 31 de Marzo de 2016 al día 2 de Mayo de 2016. Perfil de Last.fm<a href="http://www.last.fm/user/lopeznoeliab">lopeznoeliab</a></p>
 </body>
