--- a/exercises.html
+++ b/exercises.html
@@ -43,18 +43,18 @@
 						</a>
 					</li>
 					<li>
-						<a href="exercise_personal_1.html" data-largesrc="images/top tracks.svg" data-title="TP: Spotify Statistics" data-description='Top tracks'>
-							<img src="images/top tracks.svg" alt="Top tracks"/>
+						<a href="exercise_personal_1.html" data-largesrc="images/top tracks.png" data-title="TP: Spotify Statistics" data-description='Top tracks'>
+							<img src="images/top tracks.png" alt="Top tracks"/>
 						</a>
 					</li>
 					<li>
-						<a href="exercise_personal_3.html" data-largesrc="images/top albums.svg" data-title="TP: Spotify Statistics" data-description='Top albums'>
-							<img src="images/top albums.svg" alt="Top albums"/>
+						<a href="exercise_personal_3.html" data-largesrc="images/top albums.png" data-title="TP: Spotify Statistics" data-description='Top albums'>
+							<img src="images/top albums.png" alt="Top albums"/>
 						</a>
 					</li>
 					<li>
-						<a href="exercise_personal_2.html" data-largesrc="images/top artists.svg" data-title="TP: Spotify Statistics" data-description='Top artists'>
-							<img src="images/top artists.svg" alt="Top artists"/>
+						<a href="exercise_personal_2.html" data-largesrc="images/top artists.png" data-title="TP: Spotify Statistics" data-description='Top artists'>
+							<img src="images/top artists.png" alt="Top artists"/>
 						</a>
 					</li>
 				</ul>
