--- a/exercise_personal_2.html
+++ b/exercise_personal_2.html
@@ -18,7 +18,7 @@
     <img src="images/back_arrow_green.svg">
   </a>
   <div id="container-2"></div>
-  <h1>Top Artists</h1>
+  <h1>Artistas preferidos</h1>
   <div class="bar"></div>
   <h2>Estadíticas de Spotify</h2>
   <div class="chart-notes">
