--- a/exercise_personal_3.html
+++ b/exercise_personal_3.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>infovis ♡</title>
+  <title>Top albums ♡</title>
 
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <link rel="stylesheet" type="text/css" href="css/personal.css">
@@ -18,7 +18,7 @@
     <img src="images/back_arrow_green.svg">
   </a>
   <div id="container-3"></div>
-  <h1>Top Albums</h1>
+  <h1>Albums preferidos</h1>
   <div class="bar"></div>
   <h2>Estadíticas de Spotify</h2>
   <div class="chart-notes">
