--- a/exercise_personal_1.html
+++ b/exercise_personal_1.html
@@ -20,7 +20,7 @@
   <div id="container"></div>
   <h1>Canciones preferidas</h1>
   <div class="bar"></div>
-  <h2>Estadíticas de Spotify</h2>
+  <h2>Estadísticas de Spotify</h2>
   <div class="chart-notes">
     <p>Para hacer este gráfico me base en <a href="http://bl.ocks.org/lokesh005/1b23c84b68f5be134ff0">Platelets</a>.</p>
     <p>La idea es representar el top 20 de canciones más veces reproducidas. Lo que hago es usar la API que proporciona <a href="">Last.fm</a>para consultar estadísticas sobre las canciones reproducidas con Spotify. Los datos representados corresponden al historial de canciones reproducidas desde el día 31 de Marzo de 2016 al día de hoy. Perfil de Last.fm <a href="http://www.last.fm/user/lopeznoeliab">lopeznoeliab</a></p>
