--- a/exercises.html
+++ b/exercises.html
@@ -43,17 +43,17 @@
 						</a>
 					</li>
 					<li>
-						<a href="exercise_personal_1.html" data-largesrc="images/top tracks.png" data-title="Estadíticas de Spotify" data-description='Top tracks'>
+						<a href="exercise_personal_1.html" data-largesrc="images/top tracks.png" data-title="Estadísticas de Spotify" data-description='Top tracks'>
 							<img src="images/top tracks.png" alt="Top tracks"/>
 						</a>
 					</li>
 					<li>
-						<a href="exercise_personal_3.html" data-largesrc="images/top albums.png" data-title="Estadíticas de Spotify" data-description='Top albums'>
+						<a href="exercise_personal_3.html" data-largesrc="images/top albums.png" data-title="Estadísticas de Spotify" data-description='Top albums'>
 							<img src="images/top albums.png" alt="Top albums"/>
 						</a>
 					</li>
 					<li>
-						<a href="exercise_personal_2.html" data-largesrc="images/top artists.png" data-title="Estadíticas de Spotify" data-description='Top artists'>
+						<a href="exercise_personal_2.html" data-largesrc="images/top artists.png" data-title="Estadísticas de Spotify" data-description='Top artists'>
 							<img src="images/top artists.png" alt="Top artists"/>
 						</a>
 					</li>
