--- a/exercise_4.html
+++ b/exercise_4.html
@@ -13,7 +13,7 @@
   <script type="text/javascript" src="js/exercise_4.js"></script>
 </head>
 <body class="exercise exercise-4">
-  <a href="exercises.html" class="back-arrow">
+  <a href="index.html" class="back-arrow">
     <img src="images/back_arrow.svg">
   </a>
   <h1 class="title">TP4</h1>
